--- a/templates/registro/usuarios.html
+++ b/templates/registro/usuarios.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Usuarios</h1>
-</body>
-</html>
+{% extends 'registro/padre.html' %}
+{% load static %}
+
+{% block usuarios %}
+
+  <div>
+    <main class="px-3">
+        <h1>Página de usuarios</h1>
+        <p class="lead">Acá va el formulario</p>
+    </main>
+  </div>
+
+{% endblock usuarios %}
