--- a/templates/perfil/inicio.html
+++ b/templates/perfil/inicio.html
@@ -5,10 +5,13 @@
 
   <div>
     <main class="px-3">
-        <h1>Página de inicio de perfiles</h1>
-        <p class="lead">Acá va info del inicio sobre perfiles</p>
-        <p class="lead">
-        <a href="{% url 'perfiles' %}" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Ingreso Perfiles</a>
+        <h1>Página de inicio de App Perfiles</h1>
+        <br>
+        <a href="{% url 'userform' %}" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Ingreso Ususarios</a>
+        <br> <br>
+        <a href="{% url 'categoryform' %}" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Ingreso Categorías</a>
+        <br> <br>
+        <a href="{% url 'postform' %}" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Ingreso Posteos</a>
     </main>
   </div>
 
