--- a/templates/perfil/userform.html
+++ b/templates/perfil/userform.html
@@ -13,6 +13,11 @@
         </form>
     </body>    
 </div>
+<br> <br>
+<div>
+    <a class="btn btn-lg btn-secondary fw-bold border-white bg-white" href="{% url 'userbusqueda' %}">Búsqueda de contraseñas</a>
+</div>
+
 
 {% endblock userform %}
 
